--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.11",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "moment": "^2.25.3",
+    "pixi.js": "^5.3.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
     "react-fancy-visa-card": "^1.0.1",
-    "react-scripts": "^4.0.2"
+    "react-scripts": "^4.0.2",
+    "typescript": "^4.1.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
@@ -38,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@types/react-router-dom": "^5.1.7",
     "react-router-dom": "^5.2.0"
   }
 }
